Bug 857957 - Use Endian.h for byte swap. f=nfroyd, r=jfkthame, r/sr=bsmedberg