xpcom/io/nsBinaryStream.cpp
@@ -20,13 +20,13 @@
 #include <string.h>
 #include "nsBinaryStream.h"
 #include "nsCRT.h"
-#include "nsIStreamBufferAccess.h"
 #include "prlong.h"
 #include "nsString.h"
 #include "nsISerializable.h"
 #include "nsIClassInfo.h"
 #include "nsComponentManagerUtils.h"
 #include "nsIURI.h" // for NS_IURI_IID
+#include "mozilla/Endian.h"
 
 #include "jsapi.h"
 #include "jsfriendapi.h"
@@ -114,14 +114,14 @@ nsBinaryOutputStream::Write8(uint8_t aByte)
 NS_IMETHODIMP
 nsBinaryOutputStream::Write16(uint16_t a16)
 {
-    a16 = NS_SWAP16(a16);
+    a16 = mozilla::NativeEndian::swapToBigEndian(a16);
     return WriteFully((const char*)&a16, sizeof a16);
 }
 
 NS_IMETHODIMP
 nsBinaryOutputStream::Write32(uint32_t a32)
 {
-    a32 = NS_SWAP32(a32);
+    a32 = mozilla::NativeEndian::swapToBigEndian(a32);
     return WriteFully((const char*)&a32, sizeof a32);
 }
 
@@ -131,7 +131,7 @@ nsBinaryOutputStream::Write64(uint64_t a64)
     nsresult rv;
     uint32_t bytesWritten;
 
-    a64 = NS_SWAP64(a64);
+    a64 = mozilla::NativeEndian::swapToBigEndian(a64);
     rv = Write(reinterpret_cast<char*>(&a64), sizeof a64, &bytesWritten);
     if (NS_FAILED(rv)) return rv;
     if (bytesWritten != sizeof a64)
@@ -194,8 +194,7 @@ nsBinaryOutputStream::WriteWStringZ(const PRUnichar* aString)
             return NS_ERROR_OUT_OF_MEMORY;
     }
     NS_ASSERTION((uintptr_t(aString) & 0x1) == 0, "aString not properly aligned");
-    for (uint32_t i = 0; i < length; i++)
-        copy[i] = NS_SWAP16(aString[i]);
+    mozilla::NativeEndian::copyAndSwapToBigEndian(copy, aString, length);
     rv = WriteBytes(reinterpret_cast<const char*>(copy), byteCount);
     if (copy != temp)
         moz_free(copy);
@@ -472,7 +471,7 @@ nsBinaryInputStream::Read16(uint16_t* a16)
     if (NS_FAILED(rv)) return rv;
     if (bytesRead != sizeof *a16)
         return NS_ERROR_FAILURE;
-    *a16 = NS_SWAP16(*a16);
+    *a16 = mozilla::NativeEndian::swapFromBigEndian(*a16);
     return rv;
 }
 
@@ -486,7 +485,7 @@ nsBinaryInputStream::Read32(uint32_t* a32)
     if (NS_FAILED(rv)) return rv;
     if (bytesRead != sizeof *a32)
         return NS_ERROR_FAILURE;
-    *a32 = NS_SWAP32(*a32);
+    *a32 = mozilla::NativeEndian::swapFromBigEndian(*a32);
     return rv;
 }
 
@@ -500,7 +499,7 @@ nsBinaryInputStream::Read64(uint64_t* a64)
     if (NS_FAILED(rv)) return rv;
     if (bytesRead != sizeof *a64)
         return NS_ERROR_FAILURE;
-    *a64 = NS_SWAP64(*a64);
+    *a64 = mozilla::NativeEndian::swapFromBigEndian(*a64);
     return rv;
 }
 
@@ -606,9 +605,7 @@ WriteSegmentToString(nsIInputStream* aStream,
         char bytes[2] = { closure->mCarryoverByte, *aFromSegment };
         *cursor = *(PRUnichar*)bytes;
         // Now the little endianness dance
-#ifdef IS_LITTLE_ENDIAN
-        *cursor = (PRUnichar) NS_SWAP16(*cursor);
-#endif
+        mozilla::NativeEndian::swapToBigEndianInPlace(cursor, 1);
         ++cursor;
         
         // now skip past the first byte of the buffer.. code from here
@@ -628,12 +625,10 @@ WriteSegmentToString(nsIInputStream* aStream,
     uint32_t segmentLength = aCount / sizeof(PRUnichar);
 
     // copy all data into our aligned buffer.  byte swap if necessary.
+    // cursor may be unaligned, so we cannot use copyAndSwapToBigEndian directly
     memcpy(cursor, unicodeSegment, segmentLength * sizeof(PRUnichar));
     PRUnichar *end = cursor + segmentLength;
-#ifdef IS_LITTLE_ENDIAN
-    for (; cursor < end; ++cursor)
-        *cursor = (PRUnichar) NS_SWAP16(*cursor);
-#endif
+    mozilla::NativeEndian::swapToBigEndianInPlace(cursor, segmentLength);
     closure->mWriteCursor = end;
 
     // remember this is the modifed aCount and aFromSegment,
